fix(style): use auto overflow for pre/code blocks (#1426)

--- a/utils/styles/main.css
+++ b/utils/styles/main.css
@@ -177,6 +177,7 @@ pre {
   padding: 20px 0;
   background: transparent;
   background: var(--code-bg-color, #8e96aa24);
+  overflow: auto;
 }
 code {
   display: block;
